--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".WelcomeActivity">
+        <activity android:name=".WelcomeActivity"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.LoginActivity"
-            android:launchMode="singleInstance"/>
+            />
         <activity android:name=".Activities.GuideActivity"
             android:launchMode="singleInstance"/>
         <activity android:name=".Activities.MainActivity"
